# ML-NAS

./: README.md
experiment/nas-evocnn-autodeploy/: README.md  converter.py  deployer.py  generate.py  globalvar.py  mylog.py  runner-v2.py  runner.py
experiment/nas-evocnn-autodeploy/analysis/: analysis.py  analysis_beginLog.py  analysis_log.py  analysis_runnerLog.py  analysis_works.py  data.txt  data2.txt
experiment/nas-evocnn-autodeploy/basicTools/: fileTool.py
experiment/nas-evocnn-autodeploy/docs/: converter.md  deployer.md
experiment/nas-evocnn-autodeploy/models/: indi00000_00000.py  indi00000_00001.py  indi00000_00002.py
experiment/nas-evocnn-autodeploy/runner/: CMakeLists.txt  benchmark.cpp  main.cpp  model.ncnn.param  time.c
